--- a/20160626-dream/components/sass/_st_override.scss
+++ b/20160626-dream/components/sass/_st_override.scss
@@ -1,48 +1,252 @@
-    body { margin:0; padding:0; }
-    #map { position:absolute; top:0; bottom:0; width:100%; }
-    .bottom { position:absolute; bottom:0; width:100%; clear:both; }
-    .map-overlay-container { position: absolute; width:400px; top: 0; left: 0; padding: 10px; z-index: 1; }
-    .map-overlay { font: 12px/20px $bentonSans; background-color: #fff; border-radius: 3px; padding: 10px; box-shadow:0 1px 2px rgba(0,0,0,0.20); }
-    .map-overlay h2, .map-overlay p { margin: 0 0 10px; }
-    .mapboxgl-ctrl-attrib { display:none; }
-    .play { background-color:#fff !important; color:#000; }
-    .pause { background-color:#333 !important; color:#fff; }
-    #diverse { color:#299129; }
- 
-    #toggle { margin:0; padding:0; width:80px; height:23px; font-size:2em; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; font-weight:900; margin-left:auto; margin-right:auto; display:block; }
-    #toggle:hover { background-color:#333 !important; color:#fff; cursor:pointer; }
-    .navButtons { display:block; text-align:center; background-color:#fff !important; width:40px; font-size:2em; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; font-weight:900; }
-    .navButtons:hover { background-color:#333 !important; color:#fff; cursor:pointer; }
-    .previous { float:left; }
-    .next { float:right; }
+/* PROJECT STYLES */
+#wrapper {
+    text-align: center;
+    height: auto;
+    width: 800px;
+    margin-right: auto;
+    margin-left: auto;
+}
 
-    #tracker { padding-top:10px; text-align:center; }
-    .trackDot { border-radius:50%; width:10px; height:10px; display:inline-block; margin:6px; background-color:#ddd; }
-    .trackDot:hover, .current { background-color:#333; cursor:pointer; }
-    .dot { border-radius:50%; width:15px; height:15px; text-align:center; margin-right:auto; margin-left:auto; }
-    .legendContainer { text-align:center; }
+#map,
+#country {
+    width: 800px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
 
-    #geocoder-container { width:100%; margin-top:10px; }
-    #geocoder-container > div { min-width:100%; margin-left:0; }
-    .chatter span { padding:5px; }
+#mapMN {
+    width: 350px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
 
-    small { font-family:$bentonSans; color:#808080; clear:both; display:block; }  
+.none {
+    fill: #ddd !important;
+}
 
-    .chatter { padding:20px; }  
+.zoom {
+    float: none !important;
+    text-align: center;
+    padding: 20px;
+}
 
-    p { font-family:$bentonSans; }  
+#slider {
+    display: none;
+}
 
-    #info { display:none; }
+.legends {
+    width: 318px;
+    height: auto;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
 
-    .zoom { text-align:center; float:none !important; }
-    .legends { width:247px; height:auto; text-align:center; margin-right:auto; margin-left:auto; display:none; }
-    .bigNum { display:inline-block; width:32%;  }
+.metroSwitch {
+    padding: 10px;
+    display: inline-block;
+    text-align: center;
+    width: 49.5% !important;
+    background-color: #fff;
+    font-weight: 900;
+    font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+    border: 1px solid black;
+}
 
-    .mapboxgl-popup { max-width:400px; font: 12px/20px $bentonSans; }
-    .marker-title { font-weight: 700; }
+.metroSwitch:hover {
+    background-color: #333 !important;
+    color: #fff !important;
+    cursor: pointer;
+}
 
-    @media (max-width:500px) {
-      #map { position:static; height:400px; }
-      .map-overlay-container { width:100%; position:static; }
-      .bottom { position:static; width:100%; clear:both; }
+#map,
+#mapMN {
+    display: none;
+}
+
+.tableHead {
+    display: inline-block;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    width: 32%;
+    font-weight: 900;
+    font-family: "Poynter Serif RE";
+}
+
+.tableCell {
+    display: inline-block;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    width: 32%;
+    font-family: "Benton Sans";
+}
+
+.tableBreak {
+    clear: both;
+    display: block;
+}
+
+.table {
+    text-align: center;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 400px;
+}
+
+#filter input {
+    border-radius: 0 !important;
+}
+
+.district:hover,
+.selected,
+.hSort:hover,
+.start:hover {
+    background-color: #333;
+    color: #fff !important;
+    cursor: pointer;
+}
+
+#quintile {
+    float: left;
+    width: 20%;
+}
+
+#chartBlock {
+    float: right;
+    width: 70%;
+}
+
+#chart {
+    width: 100%;
+    height: 190px;
+}
+
+.card {
+    width: 100% !important;
+    height: auto !important;
+    border: 0 !important;
+    padding: 0 !important;
+    display: block !important;
+}
+
+.card:hover {
+    opacity: 1 !important;
+    cursor: default !important;
+}
+
+.chatter,
+.chartTitle {
+    text-align: left;
+}
+
+.negDark {
+    fill: #F21919 !important;
+    background-color: #F21919 !important;
+    color: #fff !important;
+}
+
+.negMid {
+    fill: #F27F7F !important;
+    background-color: #F27F7F !important;
+    color: #fff;
+}
+
+.negLight {
+    fill: #F1D9CB !important;
+    background-color: #F1D9CB !important;
+}
+
+.neutral {
+    fill: #ddd !important;
+    background-color: #fff !important;
+}
+
+.posLight {
+    fill: #D2EDCB !important;
+    background-color: #D2EDCB !important;
+}
+
+.posMid {
+    fill: #A8DA99 !important;
+    background-color: #A8DA99 !important;
+    color: #fff;
+}
+
+.posDark {
+    fill: #57B857 !important;
+    background-color: #57B857 !important;
+    color: #fff !important;
+}
+
+.state-boundary {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 2.3px;
+}
+
+path:hover {
+    cursor: normal !important;
+}
+
+#mapChatter {
+    display: none;
+}
+
+.city-label {
+    font-size: 8px !important;
+    margin-left: 3px !important;
+    text-anchor: left !important;
+}
+
+small {
+    font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+    color: #808080;
+    clear: both;
+    display: block;
+}
+
+.grid {
+    padding: 10px;
+}
+
+#gridBlock {
+    float: right;
+    width: 47%;
+}
+
+#tableBlock {
+    float: left;
+    display: inline-block;
+    width: 47%;
+}
+
+#districtName {
+    display: none;
+}
+
+#tableBlock,
+#gridBlock,
+#quintile,
+#chartBlock,
+#chart {
+    width: 100%;
+    float: none;
+    display: block !important;
+}
+
+.metroSwitch {
+    width: 32%;
+}
+
+@media (max-width:800px) {
+    #map,
+    #country {
+        width: 100%;
     }
+    #wrapper {
+        width: 100%;
+    }
+}
