--- a/20170324-pedestrian_crashes/components/sass/_st_override.scss
+++ b/20170324-pedestrian_crashes/components/sass/_st_override.scss
@@ -1,48 +1,162 @@
-    body { margin:0; padding:0; }
-    #map { position:absolute; top:0; bottom:0; width:100%; }
-    .bottom { position:absolute; bottom:0; width:100%; clear:both; }
-    .map-overlay-container { position: absolute; width:400px; top: 0; left: 0; padding: 10px; z-index: 1; }
-    .map-overlay { font: 12px/20px $bentonSans; background-color: #fff; border-radius: 3px; padding: 10px; box-shadow:0 1px 2px rgba(0,0,0,0.20); }
-    .map-overlay h2, .map-overlay p { margin: 0 0 10px; }
-    .mapboxgl-ctrl-attrib { display:none; }
-    .play { background-color:#fff !important; color:#000; }
-    .pause { background-color:#333 !important; color:#fff; }
-    #diverse { color:#299129; }
- 
-    #toggle { margin:0; padding:0; width:80px; height:23px; font-size:2em; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; font-weight:900; margin-left:auto; margin-right:auto; display:block; }
-    #toggle:hover { background-color:#333 !important; color:#fff; cursor:pointer; }
-    .navButtons { display:block; text-align:center; background-color:#fff !important; width:40px; font-size:2em; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; font-weight:900; }
-    .navButtons:hover { background-color:#333 !important; color:#fff; cursor:pointer; }
-    .previous { float:left; }
-    .next { float:right; }
+/* PROJECT STYLES */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Benton Sans", Helvetica, Arial, sans-serif !important;
+    overflow-x: hidden !important;
+}
 
-    #tracker { padding-top:10px; text-align:center; }
-    .trackDot { border-radius:50%; width:10px; height:10px; display:inline-block; margin:6px; background-color:#ddd; }
-    .trackDot:hover, .current { background-color:#333; cursor:pointer; }
-    .dot { border-radius:50%; width:15px; height:15px; text-align:center; margin-right:auto; margin-left:auto; }
-    .legendContainer { text-align:center; }
+#map {
+    width:100%;
+    height:300px;
+}
 
-    #geocoder-container { width:100%; margin-top:10px; }
-    #geocoder-container > div { min-width:100%; margin-left:0; }
-    .chatter span { padding:5px; }
+#wrapper {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 920px;
+}
 
-    small { font-family:$bentonSans; color:#808080; clear:both; display:block; }  
+canvas {
+    position: static !important;
+}
 
-    .chatter { padding:20px; }  
+#geocoder-container,
+.mapboxgl-ctrl-geocoder {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-    p { font-family:$bentonSans; }  
+.mapboxgl-ctrl-attrib {
+    display: none;
+}
 
-    #info { display:none; }
+#rightSide {
+    width: 48%;
+    float: right;
+    padding: 10px;
+}
 
-    .zoom { text-align:center; float:none !important; }
-    .legends { width:247px; height:auto; text-align:center; margin-right:auto; margin-left:auto; display:none; }
-    .bigNum { display:inline-block; width:32%;  }
+#leftSide {
+    width: 48%;
+    float: left;
+    padding: 10px;
+}
 
-    .mapboxgl-popup { max-width:400px; font: 12px/20px $bentonSans; }
-    .marker-title { font-weight: 700; }
+#filter input:focus {
+    width: 100% !important;
+}
 
-    @media (max-width:500px) {
-      #map { position:static; height:400px; }
-      .map-overlay-container { width:100%; position:static; }
-      .bottom { position:static; width:100%; clear:both; }
+#filter input {
+    width: 100% !important;
+    font-family: "Benton Sans", Helvetica, Arial, sans-serif !important;
+}
+
+.card {
+    padding: 10px;
+    height: 210px;
+    border-bottom: 1px solid #ddd;
+    width: 48%;
+    font-size: .9em;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.card div {
+    padding: 3px;
+}
+
+.card:hover {
+    opacity: .5;
+    cursor: pointer;
+}
+
+.description_chatter {
+    display: none;
+}
+
+.adjacent {
+    width:48%;
+    display:inline-block;
+    vertical-align:top;
+}
+
+#street-view {
+  height:300px;
+}
+
+.zoom {
+    float:none !important;
+}
+
+.name {
+    font-weight:900;
+}
+
+.featherlight-content .description_chatter {
+    display: block !important;
+}
+
+.featherlight-content .card {
+    width: 100% !important;
+}
+
+.featherlight-content .card:hover {
+    opacity: 1 !important;
+    cursor: normal !important;
+}
+
+#deaths {
+    overflow-x:hidden;
+    overflow-y:auto;
+    height:300px;
+}
+
+.thisOne {
+    border:1px solid #000;
+    margin:0;
+}
+
+@media (max-width:960px) {
+    #midbreak {
+        display: none;
+    }
+    #mapboxgl-ctrl-geocoder input {
+        text-align: center;
+        width: 100%;
+        margin: 0 0 0 0 !important;
+    }
+    #geocoder-container,
+    .mapboxgl-ctrl-geocoder {
+        text-align: center;
+        margin: 0 0 0 0 !important;
+        width: 100%;
+        max-width: 100%;
+    }
+    #wrapper {
+        width: 100%;
+    }
+    #map {
+        width: 100%;
+        height: 350px;
+    }
+    #rightSide {
+        width: 100%;
+        float: none;
+    }
+    #leftSide {
+        width: 100%;
+        float: none;
+    }
+}
+
+@media (max-width:500px) {
+    .card {
+        width:100%;
+        display:block;
+    }
+    .adjacent {
+        width:100%;
     }
