--- a/20170331-airport_noise/components/sass/_st_override.scss
+++ b/20170331-airport_noise/components/sass/_st_override.scss
@@ -1,8 +1,11 @@
+/* PROJECT STYLES */
+
     body { margin:0; padding:0; }
-    #map { position:absolute; top:0; bottom:0; width:100%; }
+    #map, #map_blocks, #map_noise { width:100%; height:580px; }
+
     .bottom { position:absolute; bottom:0; width:100%; clear:both; }
     .map-overlay-container { position: absolute; width:400px; top: 0; left: 0; padding: 10px; z-index: 1; }
-    .map-overlay { font: 12px/20px $bentonSans; background-color: #fff; border-radius: 3px; padding: 10px; box-shadow:0 1px 2px rgba(0,0,0,0.20); }
+    .map-overlay { font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif; background-color: #fff; border-radius: 3px; padding: 10px; box-shadow:0 1px 2px rgba(0,0,0,0.20); }
     .map-overlay h2, .map-overlay p { margin: 0 0 10px; }
     .mapboxgl-ctrl-attrib { display:none; }
     .play { background-color:#fff !important; color:#000; }
@@ -22,15 +25,16 @@
     .dot { border-radius:50%; width:15px; height:15px; text-align:center; margin-right:auto; margin-left:auto; }
     .legendContainer { text-align:center; }
 
-    #geocoder-container { width:100%; margin-top:10px; }
-    #geocoder-container > div { min-width:100%; margin-left:0; }
-    .chatter span { padding:5px; }
+    .chatter { display:none; }
+    #thisYear { text-align:center; font-size:1.3em; font-weight:900; }
 
-    small { font-family:$bentonSans; color:#808080; clear:both; display:block; }  
+    .legendBlock { width:215px; margin-right:auto; margin-left:auto; text-align:center; }
+
+    small { font-family:"Benton Sans",Helvetica,Arial,sans-serif; color:#808080; clear:both; display:block; }  
 
     .chatter { padding:20px; }  
 
-    p { font-family:$bentonSans; }  
+    p { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }  
 
     #info { display:none; }
 
@@ -38,7 +42,7 @@
     .legends { width:247px; height:auto; text-align:center; margin-right:auto; margin-left:auto; display:none; }
     .bigNum { display:inline-block; width:32%;  }
 
-    .mapboxgl-popup { max-width:400px; font: 12px/20px $bentonSans; }
+    .mapboxgl-popup { max-width:400px; font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif; }
     .marker-title { font-weight: 700; }
 
     @media (max-width:500px) {
